--- a/project-5/src/components/Cart/Checkout.module.css
+++ b/project-5/src/components/Cart/Checkout.module.css
@@ -4,7 +4,7 @@
   overflow: auto;
 }
 
-/* .control {
+.control {
   margin-bottom: 0.5rem;
 }
 
@@ -20,7 +20,7 @@
   border-radius: 4px;
   width: 20rem;
   max-width: 100%;
-} */
+}
 
 .actions {
   display: flex;
@@ -54,11 +54,17 @@
   background-color: #7a2706;
 }
 
-/* .invalid label {
+.actions .submit:disabled {
+  background-color: #ccc;
+  border: 1px solid #ccc;
+  cursor: not-allowed;
+}
+
+.invalid label {
   color: #ca3e51;
 }
 
 .invalid input {
   border-color: #aa0b20;
   background-color: #ffeff1;
-} */
+}
