added conditional content to Checkout

--- a/project-5/src/components/UI/Modal.module.css
+++ b/project-5/src/components/UI/Modal.module.css
@@ -21,6 +21,43 @@
   animation: slide-down 300ms ease-out forwards;
 }
 
+.text {
+  font: inherit;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 1rem;
+}
+
+.actions {
+  text-align: right;
+}
+
+.actions button {
+  font: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid #8a2b06;
+  padding: 0.5rem 2rem;
+  border-radius: 25px;
+  margin-left: 1rem;
+}
+
+.actions button:hover,
+.actions button:active {
+  background-color: #5a1a01;
+  border-color: #5a1a01;
+  color: white;
+}
+
+.actions .button--alt {
+  color: #8a2b06;
+}
+
+.actions .button {
+  background-color: #8a2b06;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .modal {
     width: 40rem;
